Use new http client