@@ -12,7 +12,7 @@
 		<maven.compiler.target>${java.version}</maven.compiler.target>
 		<jackson.version>2.7.3</jackson.version>
 		<slf4j.version>1.7.20</slf4j.version>
-		<jetty.version>9.4.7.v20170914</jetty.version>
+		<jetty.version>9.4.11.v20180605</jetty.version>
 	</properties>
 
 	<name>${project.artifactId}</name>
@@ -77,26 +77,29 @@
 			<version>${slf4j.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>de.mklinger.commons</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
-			<artifactId>jetty-client</artifactId>
+			<artifactId>jetty-alpn-conscrypt-server</artifactId>
 			<version>${jetty.version}</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.jetty.http2</groupId>
-			<artifactId>http2-client</artifactId>
+			<artifactId>http2-server</artifactId>
 			<version>${jetty.version}</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.eclipse.jetty.http2</groupId>
-			<artifactId>http2-http-client-transport</artifactId>
+			<groupId>org.eclipse.jetty</groupId>
+			<artifactId>jetty-servlet</artifactId>
 			<version>${jetty.version}</version>
+			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.eclipse.jetty.alpn</groupId>
-			<artifactId>alpn-api</artifactId>
-			<version>1.1.3.v20160715</version>
-		</dependency>
-
+		
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -111,36 +114,6 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.eclipse.jetty</groupId>
-			<artifactId>jetty-server</artifactId>
-			<version>${jetty.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.jetty</groupId>
-			<artifactId>jetty-servlet</artifactId>
-			<version>${jetty.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.jetty.http2</groupId>
-			<artifactId>http2-server</artifactId>
-			<version>${jetty.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.jetty</groupId>
-			<artifactId>jetty-alpn-server</artifactId>
-			<version>${jetty.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.jetty</groupId>
-			<artifactId>jetty-alpn-java-server</artifactId>
-			<version>${jetty.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>2.4</version>
@@ -152,12 +125,6 @@
 			<version>${slf4j.version}</version>
 			<scope>test</scope>
 		</dependency>
-
-		<!-- ALPN. See https://www.eclipse.org/jetty/documentation/9.4.x/alpn-chapter.html 
-			As VM launch parameter in Eclipse use -Xbootclasspath/p:${system_property:user.home}/.m2/repository/org/mortbay/jetty/alpn/alpn-boot/8.1.7.v20160121/alpn-boot-8.1.7.v20160121.jar 
-			1.8.0u74: 8.1.7.v20160121 1.8.0u77: 8.1.7.v20160121 1.8.0u91: 8.1.7.v20160121 
-			1.8.0u92: 8.1.8.v20160420 1.8.0u101: 8.1.9.v20160720 1.8.0u102: 8.1.9.v20160720 
-			1.8.0u111: 8.1.9.v20160720 1.8.0u112: 8.1.10.v20161026 1.8.0u121: 8.1.11.v20170118 -->
 	</dependencies>
 
 	<build>
@@ -203,7 +170,6 @@
 				<artifactId>maven-failsafe-plugin</artifactId>
 				<version>2.20.1</version>
 				<configuration>
-					<argLine>--add-modules jdk.incubator.httpclient</argLine>
 					<redirectTestOutputToFile>true</redirectTestOutputToFile>
 				</configuration>
 				<executions>
